--- a/lesson1/exercises/src/app/app.component.html
+++ b/lesson1/exercises/src/app/app.component.html
@@ -1,19 +1,22 @@
 <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-3">
-        <movie-list></movie-list>
-      </div>
-  
-      <div class="col-3">
-        <p>No content here yet...</p>
-      </div>
-  
-      <div class="col-3">
-        <p>No content here yet...</p>
-      </div>
+  <h1><page-title></page-title></h1>
+  <div class="row justify-content-center">
+    
+    <div class="col-3">
+      <movie-list></movie-list>
     </div>
-  </div>
   
-  <chores-list></chores-list>
-  
+<div class='col-3'>
   <fav-photos></fav-photos>
+</div>
+
+<div class="col-3">
+  <chores-list></chores-list>
+</div>
+
+<div>
+  </div>
+  <hr>
+  <fav-links></fav-links>
+</div>
+
