--- a/lesson1/exercises/src/app/chores-list/chores-list.component.css
+++ b/lesson1/exercises/src/app/chores-list/chores-list.component.css
@@ -1,12 +1,13 @@
-.chores{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: larger;
-    color: darkblue;
-    
-}
-h3{
+.chores {
+    font-family: 'london';
+    font-size: 1.6vw;
+    color: red;
+ }
+ 
+ h3 {
     text-decoration: underline;
-}
-li{
+ }
+ 
+ li {
     font-style: italic;
-}
+ }
